sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:19: error: not found: value alerneP
      alerneP = P
      ^SelectBaseball:25: error: not found: value alerneP
          alerneP = (alterneP+1)%2
          ^